Add mocha and run audit to correct vulnerabilities

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devstart": "nodemon ./index.js"
+    "devstart": "nodemon ./index.js",
+    "start": "node ./index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "googleapis": "^28.1.0",
     "meetup-api": "^1.4.32",
     "mkdirp": "^0.5.1",
-    "nodemon": "^1.17.3"
+    "mocha": "^5.2.0",
+    "nodemon": "^1.17.5"
   }
 }
